--- a/backend/package.json
+++ b/backend/package.json
@@ -15,15 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^7.0.0",
+    "@google-cloud/storage": "^6.2.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "@types/validator": "^13.7.3",
