--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "uniqid": "^5.4.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
+    "@types/uniqid": "^5.3.2",
     "@types/validator": "^13.7.3",
     "concurrently": "^7.2.2",
     "nodemon": "^2.0.16",
