--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/kms": "^3.5.1",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.8",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
+    "dexie": "^3.2.3",
+    "dexie-react-hooks": "^1.1.3",
     "downloadjs": "^1.4.7",
+    "https-browserify": "^1.0.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
