--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@google-cloud/kms": "^3.5.1",
-    "@headlessui/react": "^1.6.6",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.8",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
+    "classnames": "^2.3.2",
     "dexie": "^3.2.3",
     "dexie-react-hooks": "^1.1.3",
     "downloadjs": "^1.4.7",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^5.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
