--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "dependencies": {
     "@google-cloud/kms": "^3.5.1",
+    "@google-cloud/storage": "^6.10.1",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.8",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/downloadjs": "^1.4.3",
+    "@types/jest": "^29.5.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "dexie": "^3.2.3",
@@ -23,6 +30,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^5.13.1",
+    "typescript": "^5.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
